2006-10-10  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Control_Center.server.in: removed unused file.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnomecc.desktop.in.in: don't list the Application category, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-01-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.[ch]: added method for setting single click policy
	* control-center.c: track for changes in the nautilus click_policy key
	to make g-c-c behave exactly like nautilus

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* control-center-categories.c: (populate_category):
	* control-center.c: (main):
	* gnomecc-canvas.c: (setup_entry), (cb_canvas_event),
	(gnomecc_canvas_item_accessible_class_init),
	(gnomecc_canvas_accessible_class_init),
	(gnomecc_canvas_accessible_add_selection):
	* gnomecc-rounded-rect.c: Remove some unused code.

2005-10-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* control-center-categories.[ch] (control_center_reload_icons): added
	to reload icons if gtk theme changes
	* gnomecc-canvas.c: switch correctly both shell background and icons
	in case of theme change. Plugged a memleak on finalize

2005-10-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: calculate item widths instead of forcing them to
	be MAX_ITEM_WIDTH, wrap labels with PANGO_WRAP_WORD, this closes
	#319492. force canvas background to base[GTK_STATE_NORMAL], do not 
	repaint canvas background, this way it feels quite quicker when
	resizing the window.

2005-10-19  Carlos Garnacho Parro  <carlosg@gnome.org>

	* control-center.c: set the adjustments, so the GtkScrollBar arrows
	works again, set initial adjustment to view the top of the canvas.

2005-10-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #315505

	* control-center-categories.c (control_center_entry_new): don't show
	xscreensaver capplet icon if gnome-screensaver is installed.
	(populate_category): don't add NULL entries to the list.
