@@ -1,3 +1,7 @@
+2007-01-10  Paolo Borelli  <pborelli@katamail.com>
+
+	* control-center.c: do not leak a GList.
+
 2006-10-10  Rodrigo Moya <rodrigo@novell.com>
 
 	* GNOME_Control_Center.server.in: removed unused file.
